claude - график цен по чекбоксу